# vr_ai_platform

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Makefile  README.md  pyproject.toml
.claude/: README.md
agent_registry/: __init__.py  agent-registry-v0.yaml  agent-registry.yaml  capabilities-v0.yaml  capabilities_lookup.py  config.py  loader.py  models.py  v0_loader.py  v0_models.py  v0_reason_codes.py  v0_runner.py  validation.py
agent_runner/: __init__.py  config.py  envelope.py  llm_client.py  llm_factory.py  openai_client.py  schemas.py  server.py  shopping_agent.py  yandex_client.py
agents/: baseline_clarify.py  baseline_shopping.py
app/: __init__.py  main.py
codex/: __init__.py  reasoning_log.py
contracts/: AGENTS.md
docs/: CODEX-WORKFLOW.md  CONTRACTS.md
graphs/: AGENTS.md  __init__.py  core_graph.py
llm_policy/: __init__.py  bootstrap.py  config.py  errors.py  http_caller.py  llm-policy.cloudru.yaml  llm-policy.yaml  loader.py  models.py  runtime.py  tasks.py
logs/: .gitkeep
routers/: __init__.py  agent_invoker_shadow.py  base.py  config.py  factory.py  partial_trust_acceptance.py  partial_trust_candidate.py  partial_trust_config.py  partial_trust_sampling.py  partial_trust_types.py  shadow_agent_config.py  shadow_config.py  shadow_router.py  shadow_types.py  v1.py  v2.py
scripts/: README-partial-trust-analyzer.md  README-shadow-analyzer.md  analyze_clarify_quality.py  analyze_partial_trust.py  analyze_shadow_router.py  api_sanity.py  evaluate_domain_planner_seed.py  metrics_agent_hints_v0.py  run_agent_v0.py  (+2 more)
(+580 files in other folders)
